deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: log-monitoring
  labels:
    name: log-monitoring
